// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Dialog Default 1`] = `


`;

exports[`Storyshots Components/Dialog Draggable 1`] = `


`;

exports[`Storyshots Components/Dialog Loading 1`] = `
<section>
  

  <button
    class="fd-button"
    onclick="toggleDialog('loading-dialog-example', true)"
  >
    Open example
  </button>
  

  <div
    class="fd-dialog"
    id="loading-dialog-example"
  >
    
    
    <div
      aria-labelledby="dialog-title-9"
      aria-modal="true"
      class="fd-dialog__content fd-dialog__content--s"
      role="dialog"
    >
      
        
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-9"
            >
              
                        Loading Data...
                    
            </h2>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-dialog__body"
      >
        
            
        <strong>
          Status:
        </strong>
         Connecting 127.0.0.1
            
        <div
          aria-hidden="false"
          aria-label="Loading"
          class="fd-dialog__loader fd-busy-indicator--l"
        >
          
                
          <div
            class="fd-busy-indicator--circle-0"
          />
          
                
          <div
            class="fd-busy-indicator--circle-1"
          />
          
                
          <div
            class="fd-busy-indicator--circle-2"
          />
          
            
        </div>
        
        
      </div>
      
        
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
              onclick="toggleDialog('loading-dialog-example', false)"
            >
              Cancel
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Dialog Resizable 1`] = `


`;

exports[`Storyshots Components/Dialog Selectable 1`] = `
<section>
  

  <button
    class="fd-button"
    onclick="toggleDialog('select-dialog-example', true)"
  >
    Open example
  </button>
  

  <div
    class="fd-dialog"
    id="select-dialog-example"
  >
    
    
    <div
      aria-labelledby="dialog-title-8"
      aria-modal="true"
      class="fd-dialog__content"
      role="dialog"
    >
      
        
      <header
        class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-8"
            >
              
                        Select Dialog
                    
            </h2>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-button fd-button--transparent fd-button--compact"
            >
              Clear
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-dialog__subheader fd-bar fd-bar--subheader"
      >
        
            
        <div
          class="fd-bar__middle"
        >
          
                
          <div
            class="fd-input-group"
          >
            
                    
            <input
              class="fd-input fd-input-group__input fd-input--compact"
              placeholder="Search..."
              type="text"
            />
            
                    
            <span
              class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
            >
              
                        
              <button
                class="fd-button fd-input-group__button fd-button--icon fd-button--transparent fd-button--compact"
              >
                
                            
                <i
                  class="sap-icon--search"
                />
                
                        
              </button>
              
                    
            </span>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-dialog__body fd-dialog__body--no-vertical-padding"
      >
        
            
        <ul
          class="fd-list fd-list--compact"
        >
          
                
          <li
            class="fd-list__item"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 1
            </span>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 2
            </span>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-active"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 3
            </span>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-active"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 4
            </span>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 5
            </span>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
          >
            
                    
            <span
              class="fd-list__title"
            >
              List item 6
            </span>
            
                
          </li>
          
            
        </ul>
        
            
        <span
          class="fd-list__footer"
        >
          
                2 items selected
            
        </span>
        
        
      </div>
      
        
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
            >
              Select
            </button>
            
                
          </div>
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
              onclick="toggleDialog('select-dialog-example', false)"
            >
              Cancel
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </footer>
      
    
    </div>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Dialog Sizes 1`] = `
<section>
  

  <div
    class="fd-dialog-docs-static fd-dialog fd-dialog--active"
  >
    

    <div
      aria-labelledby="dialog-title-2"
      aria-modal="true"
      class="fd-dialog__content fd-dialog__content--s"
      role="dialog"
    >
      
    
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
        
        <div
          class="fd-bar__left"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-2"
            >
              
                    Small Dialog
                
            </h2>
            
            
          </div>
          
        
        </div>
        
    
      </header>
      
    
      <div
        class="fd-dialog__body"
      >
        
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
    
      </div>
      
    
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
        
        <div
          class="fd-bar__right"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
            >
              Save
            </button>
            
            
          </div>
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
            >
              Cancel
            </button>
            
            
          </div>
          
        
        </div>
        
    
      </footer>
      

    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-dialog-docs-static fd-dialog fd-dialog--active"
  >
    

    <div
      aria-labelledby="dialog-title-3"
      aria-modal="true"
      class="fd-dialog__content fd-dialog__content--m"
      role="dialog"
    >
      
    
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
        
        <div
          class="fd-bar__left"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-3"
            >
              
                    Medium Dialog
                
            </h2>
            
            
          </div>
          
        
        </div>
        
    
      </header>
      
    
      <div
        class="fd-dialog__body"
      >
        
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
    
      </div>
      
    
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
        
        <div
          class="fd-bar__right"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
            >
              Save
            </button>
            
            
          </div>
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
            >
              Cancel
            </button>
            
            
          </div>
          
        
        </div>
        
    
      </footer>
      

    </div>
     

  </div>
  

  <br />
  

  <div
    class="fd-dialog-docs-static fd-dialog fd-dialog--active"
  >
    

    <div
      aria-labelledby="dialog-title-4"
      aria-modal="true"
      class="fd-dialog__content fd-dialog__content--l"
      role="dialog"
    >
      
    
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
        
        <div
          class="fd-bar__left"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-4"
            >
              
                    Large Dialog
                
            </h2>
            
            
          </div>
          
        
        </div>
        
    
      </header>
      
    
      <div
        class="fd-dialog__body"
      >
        
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
    
      </div>
      
    
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
        
        <div
          class="fd-bar__right"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
            >
              Save
            </button>
            
            
          </div>
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
            >
              Cancel
            </button>
            
            
          </div>
          
        
        </div>
        
    
      </footer>
      

    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-dialog-docs-static fd-dialog fd-dialog--active"
  >
    

    <div
      aria-labelledby="dialog-title-5"
      aria-modal="true"
      class="fd-dialog__content fd-dialog__content--xl"
      role="dialog"
    >
      
    
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
        
        <div
          class="fd-bar__left"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-5"
            >
              
                    Extra Large Dialog
                
            </h2>
            
            
          </div>
          
        
        </div>
        
    
      </header>
      
    
      <div
        class="fd-dialog__body"
      >
        
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
    
      </div>
      
    
      <footer
        class="fd-dialog__footer fd-bar fd-bar--footer"
      >
        
        
        <div
          class="fd-bar__right"
        >
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--emphasized fd-button--compact"
            >
              Save
            </button>
            
            
          </div>
          
            
          <div
            class="fd-bar__element"
          >
            
                
            <button
              class="fd-dialog__decisive-button fd-button fd-button--transparent fd-button--compact"
            >
              Cancel
            </button>
            
            
          </div>
          
        
        </div>
        
    
      </footer>
      

    </div>
    

  </div>
  

</section>
`;
